# argon-player

./: README.md  pyproject.toml
docs/: planning-backlog.md  ticket-template.md
src/argon_player/: __init__.py
src/argon_player/adapters/: __init__.py  contracts.py  mock.py
src/argon_player/config/: schema.py
src/argon_player/domain/: errors.py  models.py
tests/: test_adapter_contracts.py  test_contracts.py
